syntax = "proto3";

package scans;

import "scan/pb/scan.proto";
import "host/pb/host.proto";

// Scans is a service that allows to interact with all AIMS scans.
service Scans {
   rpc Create(CreateScanRequest) returns (CreateScanResponse) {}
   rpc Read(ReadScanRequest) returns (ReadScanResponse) {}
   rpc List(ReadScanRequest) returns (ReadScanResponse) {}
   rpc Upsert(UpsertScanRequest) returns (UpsertScanResponse) {}
   rpc Delete(DeleteScanRequest) returns (DeleteScanResponse) {}
}

message RunFilters {
    int64 MaxResults = 1;
    bool Hosts = 2;
    bool Ports = 3;
}
message CreateScanRequest {
    RunFilters Filters = 1;
    repeated scan.Run Scans = 2;
}

message CreateScanResponse {
    repeated scan.Run Scans = 1;
}

message ReadScanRequest{
    RunFilters Filters = 1;
    scan.Run Scan = 2;
}

message ReadScanResponse{
    repeated scan.Run Scans = 1;
}

message ReadScanManyRequest{
    RunFilters Filters = 1;
    scan.Run Scan = 2;
}

message ReadScanManyResponse{
    repeated scan.Run Scans = 1;
}

message UpsertScanRequest{
    repeated scan.Run Scans = 1;
}

message UpsertScanResponse{
    repeated scan.Run Scans = 1;
}

message DeleteScanRequest{
    repeated scan.Run Scans = 1;
}

message DeleteScanResponse{
    repeated scan.Run Scans = 1;
}

